# slop-generator

./: .gitignore  main.py  pyproject.toml
src/: domain_search.py  logo_generator.py
